# Haruki-Service-Test

./: .gitignore  configs.yaml  go.mod  go.sum  run_test.bat
.github/workflows/: sync.yml
cmd/dbprobe/: main.go
cmd/server/: main.go  render_dispatch.go
cmd/test_cli/: main.go  main_alias_test.go  main_event_list_test.go
configs/: configs.yaml
internal/apiutils/: cloud_clients.go
internal/builder/: card_builder.go  card_builder_methods.go  card_thumbnail_helper.go  education_builder.go  event_builder.go  event_builder_test.go  gacha_builder.go  honor_builder.go  music_builder.go  music_builder_release_test.go  profile_builder.go
internal/config/: config.go
internal/controller/: card.go  card_controller_test.go  deck_controller.go  education_controller.go  event_controller.go  event_controller_test.go  gacha_controller.go  honor_controller.go  misc_controller.go  music_controller.go  mysekai_controller.go  profile_controller.go  score_controller.go  sk_controller.go  stamp_controller.go
internal/model/: drawing_request.go  query.go  score_request.go
internal/service/: card_cloud_source.go  card_data_source.go  cloud_service.go  command_parser.go  deck_local.go  deck_local_nocgo.go  deck_recommender.go  drawing.go  education_cloud_source.go  education_data_source.go  event_cloud_source.go  event_data_source.go  event_parser.go  event_search.go  extractor.go  gacha_cloud_source.go  gacha_data_source.go  global_resolver.go  global_resolver_test.go  honor_cloud_source.go  honor_data_source.go  masterdata.go  masterdata_helpers.go  masterdata_limited.go  masterdata_loaders.go  music_cloud_source.go  music_data_source.go  music_omakase.go  music_parser.go  music_search.go  parser.go  profile_cloud_source.go  profile_data_source.go  search.go  skill_formatter.go  stamp_cloud_source.go  stamp_data_source.go  supply_localization.go  utils.go
pkg/asset/: asset_helper.go  unit_helper.go
pkg/deck_cgo/: .gitignore  BUILD.md  CMakeLists.txt  deck_c_api.h  engine.go  nocgo.go  pool.go
pkg/deck_cgo/csrc/: deck_c_api.cpp  sekai_deck_recommend_pure.hpp
pkg/masterdata/: types.go
